Fixed layout bugs with massive help from @tarajane
- layout overflow on home page from sunbeans and main photo
- tiny layout overflow on all pages from navbar

--- a/css/common.css
+++ b/css/common.css
@@ -68,6 +68,9 @@ a.back:visited
 
 .main-copy
 {
+    position: relative;
+    overflow: hidden; /* prevent sunbeams from expanding the box */
+
     padding: 50px 90px 20px 90px;
     z-index: 10;
 
@@ -87,7 +90,6 @@ a.back:visited
 }
 
 .navbox {
-    width: 100%;
     height: 150px;
     padding: 6pt;
     text-align: center;
